--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,4 @@ dependencies = [
 ]
 
 [project.scripts]
-log-client = "the_schnitz.cli:log_client"
-audio-client = "the_schnitz.cli:audio_client"
-test_it = "the_schnitz.cli:test_it"
+schnitz = "the_schnitz.cli:cli"
